Writting some documentation of the practice